Use the latest version of JS, so the shell always has the newest features. bug 385159, r=brendan